# fold

./: Cargo.toml  README.md  main.py
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: compression.rs  constants.rs  error.rs  hash.rs  lib.rs  proof.rs  tree.rs  utils.rs
core/tests/: hasher_test.rs
programs/fold-program/: Cargo.toml
programs/fold-program/src/: lib.rs
sdk/: jest.config.js  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  serialization.ts  types.ts
sdk/tests/: types.test.ts
