[workspace]
members = [
    "core",
    "cli",
    "programs/fold-program"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["fold2ev <252091682+fold2ev@users.noreply.github.com>"]
license = "MIT"

[workspace.dependencies]
solana-program = "1.18"
anchor-lang = "0.29.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
bytemuck = "1.14"
bs58 = "0.5"
